<resources>
    <string name="app_name">Fletes App</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fletes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mis Fletes</string>
    <string name="menu_slideshow">Solicitar flete</string>
    <string name="bienvenida">¡Consigue tu flete de manera rápida y sencilla!</string>
    <string name="iniciarSesion">Inicia sesión con Google para continuar</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="bienvenida_home">¡Bienvenid@ por favor escoja la opción que desea!</string>

    <string name="default_web_client_id_r">608590960391-g542tplba5hcb1m77autnmig87lb5qkg.apps.googleusercontent.com</string>
    <string name="menu_camiones">Camiones disponibles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todos_camiones">Todos los camiones</string>
    <string name="cerrar_sesion_titulo">¿Desea cerrar sesion?</string>
    <string name="cerrar_sesion_mensaje">¿Seguro/a que desea cerrar sesion?</string>
    <string name="creadores">Creado por Daniel Bello y Erick Rodriguez</string>

    <string name="notification_channel_id" translatable="false">Notification_channel</string>
    <string name="notification_title">Fletes</string>
    <string name="faltaInfo">Faltan datos por digitar</string>
    <string name="reservacionRealizada">Reservacion realizada con exito!</string>
</resources>