<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.isw.proyectofletes_isw_1313.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_camionesFragment"
            app:destination="@id/camionesFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.isw.proyectofletes_isw_1313.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_add_Reservacion"
            app:destination="@id/nav_add_Reservacion" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.isw.proyectofletes_isw_1313.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/camionesFragment"
        android:name="com.isw.proyectofletes_isw_1313.CamionesFragment"
        android:label="@string/todos_camiones"
        tools:layout="@layout/fragment_camiones" >
        <action
            android:id="@+id/action_camionesFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_Reservacion"
        android:name="com.isw.proyectofletes_isw_1313.Add_Reservacion"
        android:label="Nueva Reservación"
        tools:layout="@layout/fragment_add__reservacion" >
        <action
            android:id="@+id/action_nav_add_Reservacion_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>
</navigation>